--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer base{
     body{
-        @apply bg-[#000] text-white hide-scroll;
+        @apply bg-[#000] text-white hide-scroll !scrollbar-thin !scrollbar-track-transparent !scrollbar-thumb-red-600;
     }
 
     header {
